--- a/static/css/style.css
+++ b/static/css/style.css
@@ -305,11 +305,28 @@ em.arrow{
 	height:100%;
 	text-align:center;
 }
-#casetxt{
+.casetxt{
 	position:absolute;
 	bottom:0;
-	text-align:center;
-	font-size:14px;
 	width:100%;
-	background:#f30;
+}
+#casetxt{
+	width:886px;
+	margin-left:auto;
+	margin-right:auto;
+	padding-bottom:10px;
+	padding-top:10px;
+	padding-left:14px;
+	font-size:14px;
+	border-top:1px solid #202020;
+	background:rgba(32,32,32,0.7);
+	filter:progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr='#B3202020', endColorstr='#B3202020');
+
+}
+#casetxt a{
+	text-decoration:underline;
+	color:#fff;
+}
+#casetxt a:hover{
+	color:#e63009;
 }
