--- a/static/css/style.css
+++ b/static/css/style.css
@@ -320,6 +320,7 @@ em.arrow{
 	font-size:14px;
 	border-top:1px solid #202020;
 	background:rgba(32,32,32,0.7);
+	line-height:21px;
 	filter:progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr='#B3202020', endColorstr='#B3202020');
 
 }
