--- a/static/css/style.css
+++ b/static/css/style.css
@@ -288,16 +288,36 @@ em.arrow{
 	border-style:none solid;
 	border-width:2px;
 	border-color:#f0f0f0;
+	z-index:19;
 }
 .imgthum img{
 	vertical-align:bottom;
 	cursor:pointer;
 }
 .imgview{
-	margin-left:130px;
 	height:100%;
 	margin-right:130px;
 	position:relative;
+	z-index:8;
+	background:#202020;
+}
+#arrow{
+	display:block;
+	position:absolute;
+	top:50%;
+	right:129px;
+	border-style:solid;
+	border-width:11px;
+	border-color:transparent #f0f0f0 transparent transparent;
+	_border-color:tomato #f0f0f0 tomato tomato;
+	_filter:chroma(color=tomato);
+	text-indent:-999em;
+	width:0;
+	height:0;
+	font-size:0;
+	overflow:hidden;
+	margin-top:-10px;
+	z-index:9;
 }
 .imgview img{
 	vertical-align:middle;
