--- a/static/css/style.css
+++ b/static/css/style.css
@@ -146,16 +146,16 @@ em.arrow{
 	overflow:hidden;
 	position:relative;
 }
-.inner_page .area{
-	display:none;
-	background:#202020;
+.index .area{
+	background:url(../img/loading.gif) no-repeat center center #202020;
 }
 .area iframe{
 	border:none;
 	overflow:hidden;
 	width:100%;
 	height:100%;
-	background:#202020;
+	position:absolute;
+	top:-9999em;
 }
 .ft{
 	position:absolute;
@@ -433,11 +433,6 @@ em.arrow{
 #contact strong{
 	color:#e63009;
 }
-.index{
-	background-image:url(../img/loading.gif);
-	background-repeat:no-repeat;
-	background-position:-9999px -9999px;
-}
 .inner_page,.inner_page body{
-	background:url(../img/loading.gif) no-repeat center center #202020;
+	background:#202020;
 }
