--- a/static/css/style.css
+++ b/static/css/style.css
@@ -324,6 +324,8 @@ em.arrow{
 }
 .imgview img{
 	vertical-align:middle;
+	border:3px solid #f0f0f0;
+	border-radius:3px;
 }
 .imgview .lcur{
 	cursor:url("http://184.164.137.138/static/img/left.cur"), pointer;
