--- a/static/css/style.css
+++ b/static/css/style.css
@@ -149,6 +149,9 @@ em.arrow{
 .index .area{
 	background:url(../img/loading.gif) no-repeat center center #202020;
 }
+#index{
+	background-image:none;
+}
 .area iframe{
 	border:none;
 	overflow:hidden;
