--- a/static/css/style.css
+++ b/static/css/style.css
@@ -314,8 +314,8 @@ em.arrow{
 	right:129px;
 	border-style:solid;
 	border-width:11px;
-	border-color:transparent #f0f0f0 transparent transparent;
-	_border-color:tomato #f0f0f0 tomato tomato;
+	border-color:transparent #e63009 transparent transparent;
+	_border-color:tomato #e63009 tomato tomato;
 	_filter:chroma(color=tomato);
 	text-indent:-999em;
 	width:0;
@@ -345,19 +345,25 @@ em.arrow{
 	text-align:center;
 }
 #cbox{
-	width:122px;
+	width:120px;
 	height:88px;
 	position:absolute;
 	right:5px;
 	top:50%;
 	margin-top:-45px;
 	z-index:99;
-	border-style:solid none;
+	border-style:solid;
 	border-width:2px;
-	border-color:#f0f0f0;
-	text-indent:-999em;
-	background:rgba(240,240,240,0.4);
-    filter:progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr='#66F0F0F0', endColorstr='#66F0F0F0');
+	border-color:#e63009;
+}
+#cbox div{
+	width:100%;
+	height:100%;
+	text-indent:-9999em;
+	background:#f0f0f0;
+	opacity:0.4;
+	filter:alpha(opacity=40);
+	cursor:default;
 }
 .casetxt{
 	position:absolute;
