--- a/static/css/style.css
+++ b/static/css/style.css
@@ -360,7 +360,7 @@ em.arrow{
 	width:100%;
 	height:100%;
 	text-indent:-9999em;
-	background:#f0f0f0;
+	background:#e0e0e0;
 	opacity:0.4;
 	filter:alpha(opacity=40);
 	cursor:default;
